--- a/examples/package.json
+++ b/examples/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "antd": "^5.23.0",
+    "live2d-motionsync": "0.0.1-beta-2",
     "pixi-live2d-display": "^0.4.0",
     "pixi.js": "^6.5.10",
     "react": "^18.3.1",
