--- a/examples/package.json
+++ b/examples/package.json
@@ -15,7 +15,8 @@
     "pixi-live2d-display": "^0.4.0",
     "pixi.js": "^6.5.10",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router": "^7.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
