--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "packages/*"
   ],
   "scripts": {
+    "react": "pnpm --filter react dev",
     "changeset": "changeset",
     "version-packages": "changeset version",
     "release": "changeset publish"
