--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -12,14 +12,19 @@
     "sourceMap": true,
     "outDir": "dist",
     "baseUrl": ".",
-    "noUnusedLocals": true,
+    "noUnusedLocals": false,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "strictPropertyInitialization": false,
     "strictNullChecks": false,
     "paths": {
-      "@/*": ["packages/*/src"]
+      "@/*": [
+        "packages/*/src"
+      ]
     }
   },
-  "exclude": ["node_modules", "dist"]
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
