--- a/docs/package.json
+++ b/docs/package.json
@@ -12,6 +12,7 @@
     "@codesandbox/sandpack-react": "^2.20.0",
     "@live2d-motionsync/core": "workspace:^",
     "@orama/tokenizers": "^3.1.11",
+    "dedent": "^1.6.0",
     "fumadocs-core": "15.6.5",
     "fumadocs-mdx": "11.7.0",
     "fumadocs-ui": "15.6.5",
