feat: 修复demo bug

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   ],
   "scripts": {
     "react": "pnpm --filter react dev",
+    "core": "pnpm --filter core dev",
     "docs": "cd docs && pnpm dev",
     "changeset": "changeset",
     "version-packages": "changeset version",
